--- a/style.css
+++ b/style.css
@@ -228,15 +228,24 @@ h1{
   padding: 6vh 0 6vh 0;
 }
 
-.hero img{
-  border: 10px solid var(--clr-neutral-100);
-  margin-top: 1em;
-  box-shadow: var(--border-shadow);
-}
-
 .hero p{
   max-width: 45%;
   padding: 2vh 0 2vh 0;
+}
+
+.hero__img{
+  max-width: 70%;
+  list-style-type: none;
+  border: 10px solid var(--clr-neutral-100);
+  margin-top: 1em;
+  box-shadow: var(--border-shadow);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: stretch;
+}
+
+.hero__img img{
+
 }
 
 .newsletter{
