--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ a {
   }
 }
 
-/*    ******************************************************  */
+/*            HEADER           */
 
 body {
   font-family: var(--font-base);
@@ -221,6 +221,8 @@ h1{
   font: var(--fw-700) var(--fs-600) var(--font-base);
 }
 
+/*          HERO           */
+
 .hero{
   display: flex;
   flex-direction: column;
@@ -262,27 +264,124 @@ h1{
   .hero__img img[data-type="featured-5"] {grid-column: 2 / 3 ;}
 }
 
+@media (max-width: 600px) {
+  .hero__img{
+  grid-template-columns: repeat(2, 1fr);
+  }
+  .hero__img img{
+  object-fit: cover;
+  }
+  .hero__img img[data-type="featured-5"] {grid-column: 1 / 2 ;}
+}
 
+/*          NEWSLETTER           */
 
 .newsletter{
   background-color: var(--clr-neutral-100);
   display: flex;
+  justify-content: center;
+  height: 40vh;
+  padding: 3rem 0;
+}
+
+.newsletter__input{
+  width: 40%;
+  display: grid;
+
 }
 
 .newsletter p{
-  font: var(--fw-600) var(--fs-400) var(--font-base);
+  font: var(--fw-700) var(--fs-400) var(--font-base);
+  padding-bottom: 0.5rem;
+}
+
+.newsletter input {
+  max-width: 10rem; 
+}
+
+.planting {
+  padding: 2.5em;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 50%;
+  background-color: var(--clr-green-400);
+
+  svg {
+    width: 6.5em;
+    height: auto;
+  }
 }
 
 .newsletter svg{
-    stroke: var(--clr-green-400);
+  stroke: var(--clr-green-400);
   width: 42px;
   height: 42px;
   stroke-width: 12;
 }
 
+/*            CARDS         */
+
+.cards{
+  gap: 2vh;
+  padding: 6vh 0 6vh 0;
+  max-width: 70%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns:  repeat(4, 1fr);
+  justify-content: center;
+}
+
+.card{ 
+  padding:0.75rem;
+  background-color: var(--clr-neutral-100);
+  border: 1px solid var(--clr-neutral-300);
+
+    img{
+  padding-bottom: 2vh ;
+  }
+
+  button{
+  border-radius: 50px;
+  border: none;
+  padding: 0.2rem;
+  text-transform: uppercase;
+  color: var(--clr-neutral-100);
+  font-size: var(--fs-100);
+  font-weight: bold;
+  }
+
+  h3{
+    padding: 1vh 0 1vh 0;
+  }
+
+  .avatar{
+        /* border-radius: 100%;
+        border: 1px solid var(--clr-neutral-400); */
+        width: 3rem;
+        padding: 0;
+      }
+}
+
+.card__footer{
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  padding: 0.5rem 0 0 0 ;
+  font: var(--fw-500) var(--fs-300)/0.8 var(--font-base);
+  img[data-type="featured-1"] {
+    grid-row: span 2;
+    }
+}
+
+
+
+
+/*            ARCHIVE         */
+
 .search{
   background-color: var(--clr-neutral-100);
 }
+
+/*             FOOTER         */
 
 footer{
   background-color: var(--clr-green-400);
